Added article service.

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     <script type="text/javascript" src="/js/controllers/navBarController.js"></script>
     <script type="text/javascript" src="/js/controllers/searchController.js"></script>
     <script type="text/javascript" src="/js/controllers/filterController.js"></script>
+    <script type="text/javascript" src="/js/services/articleService.js"></script>
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Nunito" />
 
 </head>
